--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Schoolweb</title>
+  <title>EduSure</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,10 +12,27 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/screen.css" rel="stylesheet">
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script> 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>    
  
 </head>
 <body>
   <app-root></app-root>
+  
+<footer class="footer-container">
+  <div class="container">
+    <div class="row clearfix">
+      <div class="col-md-6">
+        <select class="form-control">
+          <option value="">English</option> 
+        </select>
+      </div>
+      <div class="col-md-6 text-right">
+        <p>Copyright, 2019 EduSure Rights Reserved, <a href="#">Terms and conditions</a></p>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
