--- a/LICENSE_BUILDER/WEB/src/index.html
+++ b/LICENSE_BUILDER/WEB/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>LICENSE</title>
@@ -12,10 +13,23 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
- 
+  <link rel="stylesheet" href="assets/css/screen.css">
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
   <app-root></app-root>
+  <div class="clearfix"></div>
+  <footer class="footer-container mt-3">
+    <div class="container-fluid">
+      <div class="row clearfix">
+        <div class="col-md-12 text-center">
+          <p>Copyright, 2019 EduSure Name Rights Reserved, <a href="#">Terms and conditions</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
