license and web controll

--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -20,12 +20,11 @@
 <body>
   <app-root></app-root>
   
-<footer class="footer-container">
-  <div class="container">
+<footer class="footer-container m-3">
+  <div class="container-fluid">
     <div class="row clearfix">
-      <div class="col-md-6">
-      </div>
-      <div class="col-md-6 text-right">
+    
+      <div class="col-md-12 text-center">
         <p>Copyright, 2019 EduSure Rights Reserved, <a href="#">Terms and conditions</a></p>
       </div>
     </div>
