changes for school

--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>EduSure</title>
@@ -13,22 +14,22 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="assets/css/screen.css" rel="stylesheet">
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script> 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>    
- 
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
   <app-root></app-root>
-  
-<footer class="footer-container m-3">
-  <div class="container-fluid">
-    <div class="row clearfix">
-    
-      <div class="col-md-12 text-center">
-        <p>Copyright, 2019 EduSure Rights Reserved, <a href="#">Terms and conditions</a></p>
-      </div>
-    </div>
+
+  <div class="footer-logo">
+    <p>
+      Company Name
+    </p>
+    <p class="small">Copyright, 2019 Company Name Rights Reserved, <br>
+      <a href="#">Terms and conditions</a></p>
   </div>
-</footer>
+
 </body>
+
 </html>
