--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -19,5 +19,13 @@
 <body>
   <app-root></app-root>
 </body>
-
+<footer class="footer-container">
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-6 text-right">
+                <p>Copyright, 2019  EduSure Rights Reserved, <a href="#">Terms and conditions</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
