changes for css

--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -14,15 +14,33 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script> 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>       
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>    
+<style>
+.footer-container .container-fluid {
+  border-top: 1px solid #b3b1b1;
+  padding-bottom: 15px;
+  padding-top: 15px;
+
+  font-size: 12px;
+  color: #c1c1c1;
+}
+
+.footer-container a {
+ 
+  color: #ED683D;
+
+}
+
+
+</style>
 </head>
 <body>
   <app-root></app-root>
 </body>
 <footer class="footer-container">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row clearfix">
-            <div class="col-md-6 text-right">
+            <div class="col-md-12 text-center">
                 <p>Copyright, 2019  EduSure Rights Reserved, <a href="#">Terms and conditions</a></p>
             </div>
         </div>
