--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script> 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>    
+  <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
 <style>
 .footer-container .container-fluid {
   border-top: 1px solid #b3b1b1;
