--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -9,13 +9,12 @@
   <meta charset="UTF-8">
   <title>Index | School</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script> 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>    
-  <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/all.css">
+  <link href="assets/css/screen.css" rel="stylesheet">
+  <script src='assets/css/jquery-2.2.4.min.js'></script> 
+  <script src="assets/css/bootstrap.min.js" ></script>    
+  <script src="assets/css/jspdf.min.js"></script>
 <style>
 .footer-container .container-fluid {
   border-top: 1px solid #b3b1b1;
@@ -27,9 +26,7 @@
 }
 
 .footer-container a {
- 
   color: #ED683D;
-
 }
 
 
