changes for pdf view

--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -15,6 +15,7 @@
   <script src='assets/css/jquery-2.2.4.min.js'></script> 
   <script src="assets/css/bootstrap.min.js" ></script>    
   <script src="assets/css/jspdf.min.js"></script>
+  <script type="application/l10n"></script>
 <style>
 .footer-container .container-fluid {
   border-top: 1px solid #b3b1b1;
