changes for school

--- a/WEB/src/index.html
+++ b/WEB/src/index.html
@@ -12,10 +12,13 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/all.css">
   <link href="assets/css/screen.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <script src='assets/css/jquery-2.2.4.min.js'></script> 
   <script src="assets/css/bootstrap.min.js" ></script>    
   <script src="assets/css/jspdf.min.js"></script>
   <script type="application/l10n"></script>
+  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 <style>
 .footer-container .container-fluid {
   border-top: 1px solid #b3b1b1;
